--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<!-- 特别注意版本问题, 看到评论以后得以纠正 -->
+			<version>1.2.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
