--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,10 @@
 
 	<dependencies>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<!--SpringMVC-->
 		<dependency>
@@ -88,8 +88,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-
-		<!--mapper 资源配置-->
+<!--
+		&lt;!&ndash;mapper 资源配置&ndash;&gt;
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
@@ -99,6 +99,6 @@
 				</includes>
 				<filtering>false</filtering>
 			</resource>
-		</resources>
+		</resources>-->
 	</build>
 </project>
